# add_subdirectory( distributionModels )
# add_subdirectory( basic )

# add_subdirectory( solidParticle )
# PROBLEM!!!
#add_subdirectory( intermediate )
# add_subdirectory( turbulence )
# add_subdirectory( spray )
add_subdirectory( DSMC )
add_subdirectory( coalCombustion )
add_subdirectory( molecularDynamics )

